# scriptlang

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  ENV_DRIVEN_GAPS.md  IMPLEMENTATION.md  MACRO_ENHANCEMENT_PLAN.md  Makefile  PLANS.md  README.md  SEMANTIC_REWRITE_PLAN.md  SIMPLIFICATION_CANDIDATES.md  SIMPLIFY_AND_CLEANUP.md  TESTING.md  USE_MACRO_IMPLEMENTATION_PLAN.md  clean_code_plan.md  eslint.config.mjs  package-lock.json  package.json  plan.md  tsconfig.json  vitest.config.ts
crates/sl-api/: Cargo.toml
crates/sl-compiler/: Cargo.toml
crates/sl-core/: Cargo.toml
crates/sl-integration-tests/: Cargo.toml
crates/sl-parser/: Cargo.toml
crates/sl-repl/: Cargo.toml
crates/sl-repl/src/: commands.rs  lib.rs  main.rs  session.rs
crates/sl-runtime/: Cargo.toml
docs/: DESIGN.md  FRONTEND.md  HARNESS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  TEST_WORKFLOW.md  choice-traversal-tool.md  plan_for_more_elixir_like.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/product-specs/: index.md  player-cli.md  syntax-manual.md
docs/references/: agent-first-engineering.md
scripts/: choice-traversal.ts  claude-coverage-loop.sh  ralph-task-loop.sh  repl-run.sh  repl-target.xml  validate-docs.mjs  validate-no-unsafe-casts.mjs
src/: api.ts  index.ts
src/cli/: player.ts
src/compiler/: compiler.ts  (+4 more)
test/: api.test.ts  cli-agent.test.ts  cli-tui-core.test.ts  compiler.test.ts  coverage-branches.test.ts  esm-migration-smoke.test.ts  runtime.test.ts  smoke.test.ts
(+381 files in other folders)
