[package]
name = "sl-repl"
version = "0.1.0"
edition = "2024"

[dependencies]
rhai.workspace = true
rustyline = "17.0.2"
sl-api = { path = "../sl-api" }
sl-compiler = { path = "../sl-compiler" }
sl-core = { path = "../sl-core" }
sl-parser = { path = "../sl-parser" }
sl-runtime = { path = "../sl-runtime" }
